--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,16 +1,18 @@
 {
   "env": {
-    "es6": true,
-    "node": true
+    "node": true,
+    "es6": true
   },
   "extends": "eslint:recommended",
   "parserOptions": {
-    "ecmaVersion": 2017
+    "ecmaVersion": 2017,
+    "sourceType": "module"
   },
   "rules": {
     "indent": [
       "error",
-      2
+      2,
+      { "SwitchCase": 1 }
     ],
     "linebreak-style": [
       "error",
@@ -30,6 +32,6 @@
         "args": "none"
       }
     ],
-	"no-console": "off"
+    "no-console": "off"
   }
 }
