--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "homepage": "https://github.com/RealBlazeIt/patron#readme",
   "dependencies": {
-    "discord.js": "github:hydrabolt/discord.js",
+    "discord.js": "^11.1.0",
     "es6-enum": "^1.1.0",
     "require-all": "^2.2.0"
   },
