--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "types": "./typings/index.d.ts",
   "scripts": {
     "test": "node src/index.js",
-	"lint": "eslint src/** --fix"
+    "lint": "eslint --fix src/** && tslint --fix typings/index.d.ts"
   },
   "repository": {
     "type": "git",
@@ -33,6 +33,7 @@
     "**/*.json"
   ],
   "devDependencies": {
+    "eslint": "^4.2.0",
     "tslint": "^5.5.0",
     "typescript": "^2.4.1"
   }
