--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,8 +5,7 @@
   },
   "extends": "eslint:recommended",
   "parserOptions": {
-    "ecmaVersion": 2017,
-	"sourceType": "module"
+    "ecmaVersion": 2017
   },
   "rules": {
     "indent": [
@@ -31,6 +30,10 @@
 	  "error", 
 	  "always"
 	],
+	"array-bracket-newline": [
+	  "error", 
+	  { "minItems": 2 }
+	],
 	"no-multiple-empty-lines": [
 	  "error",
 	  { "max": 1 }
@@ -48,14 +51,15 @@
 	  "always"
 	],
 	"space-before-function-paren": [
-	  "error", 
-	  "never"
+	  "error",
+	  { "named": "never" }
 	],
 	"multiline-ternary": [
 	  "error", 
 	  "never"
 	],
 	"array-bracket-spacing": "error",
+	"array-element-newline": "error",
 	"no-var": "error",
 	"no-else-return": "error",
 	"no-empty-function": "error",
@@ -90,7 +94,6 @@
 	"arrow-spacing": "error",
 	"key-spacing": "error",
 	"switch-colon-spacing": "error",
-	"eol-last": "error",
     "no-console": "off"
   }
 }
