name changes, strarted documentation & handler fix

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   ],
   "devDependencies": {
     "eslint": "^4.2.0",
+    "jsdoc": "^3.5.3",
     "tslint": "^5.5.0",
     "typescript": "^2.4.1"
   }
