--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "types": "./typings/index.d.ts",
   "scripts": {
     "test": "node src/index.js",
-    "lint": "eslint src/** --fix && tslint --fix typings/index.d.ts"
+    "lint": "eslint src/** --fix",
+    "docs": "node_modules/.bin/jsdoc src -r -R README.md -d docs"
   },
   "repository": {
     "type": "git",
@@ -34,6 +35,7 @@
   ],
   "devDependencies": {
     "eslint": "^4.2.0",
+    "eslint-plugin-jsdoc": "^3.1.2",
     "jsdoc": "^3.5.3",
     "tslint": "^5.5.0",
     "typescript": "^2.4.1"
