--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -79,6 +79,7 @@
     "no-path-concat": "error",
     "no-new-require": "error",
     "no-sync": "error",
+    "no-multi-spaces": "error",
     "block-spacing": "error",
     "brace-style": "error",
     "curly": "error",
