major linter improvements

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,9 +7,6 @@
   "parserOptions": {
     "ecmaVersion": 2017
   },
-  "plugins": [
-    "jsdoc"
-  ],
   "rules": {
     "indent": [
       "error",
@@ -65,20 +62,68 @@
       "error",
       "never"
     ],
+    "no-empty": [
+      "error",
+      {
+        "allowEmptyCatch": true
+      }
+    ],
+    "padded-blocks": [
+      "error",
+      "never"
+    ],
+    "quote-props": [
+      "error",
+      "as-needed"
+    ],
+    "no-shadow": [
+      "error",
+      {
+        "builtinGlobals": true
+      }
+    ],
+    "no-magic-numbers": [
+      "error",
+      {
+        "ignore": [
+          -1,
+          0,
+          1
+        ],
+        "ignoreArrayIndexes": true
+      }
+    ],
+    "one-var": [
+      "error",
+      "never"
+    ],
+    "valid-jsdoc": [
+      "error",
+      {
+        "requireReturn": false
+      }
+    ],
     "array-bracket-spacing": "error",
     "no-var": "error",
     "no-else-return": "error",
+    "no-extend-native": "error",
     "no-empty-function": "error",
     "no-implicit-coercion": "error",
     "no-new-func": "error",
     "no-return-assign": "error",
+    "no-sequences": "error",
     "no-return-await": "error",
     "no-self-compare": "error",
     "no-useless-return": "error",
+    "no-useless-concat": "error",
+    "no-useless-call": "error",
     "no-nested-ternary": "error",
     "no-path-concat": "error",
     "no-new-require": "error",
+    "no-new-wrappers": "error",
+    "no-floating-decimal": "error",
     "no-sync": "error",
+    "no-with": "error",
     "no-multi-spaces": "error",
     "block-spacing": "error",
     "brace-style": "error",
@@ -88,12 +133,16 @@
     "comma-spacing": "error",
     "no-mixed-operators": "error",
     "no-lonely-if": "error",
+    "no-lone-blocks": "error",
     "no-array-constructor": "error",
     "no-multi-assign": "error",
     "no-new-object": "error",
     "no-trailing-spaces": "error",
     "no-unneeded-ternary": "error",
+    "no-invalid-this": "error",
+    "no-void": "error",
     "operator-assignment": "error",
+    "spaced-comment": "error",
     "space-before-blocks": "error",
     "prefer-arrow-callback": "error",
     "prefer-const": "error",
@@ -103,13 +152,15 @@
     "eol-last": "error",
     "no-console": "off",
     "guard-for-in": "error",
-    "jsdoc/check-param-names": 1,
-    "jsdoc/check-tag-names": 1,
-    "jsdoc/require-description-complete-sentence": 1,
-    "jsdoc/require-param": 1,
-    "jsdoc/require-param-description": 1,
-    "jsdoc/require-param-type": 1,
-    "jsdoc/require-returns-description": 1,
-    "jsdoc/require-returns-type": 1
+    "no-undef-init": "error",
+    "no-use-before-define": "error",
+    "no-param-reassign": "error",
+    "keyword-spacing": "error",
+    "global-require": "error",
+    "no-loop-func": "error",
+    "no-label-var": "error",
+    "dot-notation": "error",
+    "dot-location": "error",
+    "prefer-promise-reject-errors": "error"
   }
 }
