Added support for eris (#3)
Type readers are untested, will remain in master for a bit until tested both on d.js and eris, along with all the eris type readers.

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "keywords": [
     "discord",
     "discordjs",
+    "eris",
     "nodejs",
     "bot"
   ],
@@ -25,11 +26,7 @@
     "url": "https://github.com/vim2meta/patron.js/issues"
   },
   "homepage": "https://github.com/vim2meta/patron.js#readme",
-  "dependencies": {
-    "discord.js": "^11.2.1",
-    "es6-enum": "^1.1.0",
-    "require-all": "^2.2.0"
-  },
+  "dependencies": {},
   "devDependencies": {
     "eslint": "^4.9.0",
     "jsdoc": "^3.5.3",
