--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "types": "typings/index.d.ts",
   "scripts": {
     "test": "node src/index.js",
-    "lint": "eslint src/** --fix",
+    "lint": "node_modules/.bin/eslint src/** --fix",
     "docs": "node_modules/.bin/jsdoc src -r -R README.md -d docs"
   },
   "repository": {
