--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,7 +32,10 @@
     ],
     "eqeqeq": [
       "error",
-      "always"
+      "always",
+      {
+        "null": "ignore"
+      }
     ],
     "no-multiple-empty-lines": [
       "error",
