--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "patron.js",
-  "version": "3.0.3",
-  "description": "The cleanest discord.js command framework.",
+  "version": "3.0.4",
+  "description": "The cleanest command framework for discord.js and eris.",
   "main": "src/index.js",
   "types": "typings/index.d.ts",
   "scripts": {
-    "test": "node src/index.js",
-    "lint": "node_modules/.bin/eslint src/**",
+    "test": "npm run lint && node src/index.js",
+    "lint": "node_modules/.bin/eslint . --ext .js",
     "docs": "node_modules/.bin/jsdoc src -r -R README.md -d docs"
   },
   "repository": {
@@ -28,8 +28,8 @@
   "homepage": "https://github.com/vim2meta/patron.js#readme",
   "dependencies": {},
   "devDependencies": {
-    "eslint": "^4.19.1",
-    "jsdoc": "^3.5.3",
-    "typescript": "^2.8.3"
+    "eslint": "^5.6.1",
+    "jsdoc": "^3.5.5",
+    "typescript": "^3.1.3"
   }
 }
