--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "types": "typings/index.d.ts",
   "scripts": {
     "test": "npm run lint && node src/index.js",
-    "lint": "node_modules/.bin/eslint . --ext .js",
+    "lint": "node_modules/.bin/eslint ./src/** --ext .js",
     "docs": "node_modules/.bin/jsdoc src -r -R README.md -d docs"
   },
   "repository": {
