first pass at 3.1.0

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,9 @@
 language: node_js
-node_js:
-  - "node"
-  - "lts/*"
-cache:
-  directories:
-    - node_modules
-install: npm install
-sudo: enabled
-dist: xenial
+
+node_js: ["node", "lts/*"]
+
+cache: {
+  directories: [node_modules]
+}
+
+install: npm install --production
