--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "patron.js",
-  "version": "3.0.4",
+  "version": "3.1.0",
   "description": "The cleanest command framework for discord.js and eris.",
   "main": "src/index.js",
   "types": "typings/index.d.ts",
@@ -14,21 +14,23 @@
     "url": "git+https://github.com/vim2meta/patron.js.git"
   },
   "keywords": [
+    "bot",
+    "command",
     "discord",
-    "discordjs",
+    "discord.js",
     "eris",
-    "nodejs",
-    "bot"
+    "framework",
+    "nodejs"
   ],
-  "author": "vim#3630",
-  "license": "MIT",
+  "author": "ElJay#7711",
+  "license": "AGPL-3.0-only",
   "bugs": {
     "url": "https://github.com/vim2meta/patron.js/issues"
   },
   "homepage": "https://github.com/vim2meta/patron.js#readme",
   "dependencies": {},
   "devDependencies": {
-    "eslint": "^5.6.1",
+    "eslint": "^5.7.0",
     "jsdoc": "^3.5.5",
     "typescript": "^3.1.3"
   }
