--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "npm run lint && node src/index.js",
     "lint": "node_modules/.bin/eslint ./src/** --ext .js",
-    "docs": "node_modules/.bin/jsdoc src -r -R README.md -d docs"
+    "docs": "node_modules/.bin/jsdoc src -r -c jsdoc.json -R README.md -d docs"
   },
   "repository": {
     "type": "git",
