--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -6,272 +6,113 @@ env: {
 extends: "eslint:recommended"
 
 rules: {
-  array-bracket-newline: [2, {multiline: true}],
-  array-bracket-spacing: 2,
-  array-element-newline: [2, {
-    minItems: 5,
-    multiline: true
+  array-bracket-spacing: "error",
+  curly: ["error", "multi-or-nest", "consistent"],
+  eol-last: "error",
+  eqeqeq: ["error", "smart"],
+  func-call-spacing: "error",
+  function-call-argument-newline: ["error", "consistent"],
+  function-paren-newline: "error",
+  indent: ["error", 2, {
+    CallExpression: {arguments: 1},
+    SwitchCase: 1
   }],
-  arrow-body-style: 2,
-  arrow-parens: [2, "as-needed"],
-  arrow-spacing: 2,
-  brace-style: 2,
-  comma-dangle: 2,
-  comma-spacing: 2,
-  comma-style: 2,
-  computed-property-spacing: 2,
-  curly: [2, "multi-or-nest", "consistent"],
-  dot-location: [2, "property"],
-  dot-notation: 2,
-  eol-last: 2,
-  eqeqeq: [2, "always", {null: "ignore"}],
-  func-call-spacing: 2,
-  function-paren-newline: [2, "consistent"],
-  guard-for-in: 2,
-  implicit-arrow-linebreak: 2,
-  indent: [2, 2, {SwitchCase: 1}],
-  key-spacing: 2,
-  keyword-spacing: 2,
-  linebreak-style: 2,
-  lines-between-class-members: 2,
-  max-depth: [2, {max: 4}],
-  max-len: [2, {
-    tabWidth: 2,
-    ignoreComments: false,
-    ignoreUrls: false,
-    ignoreStrings: false,
-    ignoreTemplateLiterals: false
+  keyword-spacing: ["error", {
+    before: false,
+    after: true,
+    overrides: {
+      this: {after: false, before: true},
+      of: {before: true},
+      instanceof: {before: true},
+      extends: {before: true},
+      in: {before: true},
+      from: {before: true},
+      as: {before: true},
+      break: {after: false},
+      catch: {after: false},
+      continue: {after: false},
+      debugger: {after: false},
+      do: {after: false},
+      else: {after: false},
+      finally: {after: false},
+      for: {after: false},
+      if: {after: false},
+      super: {after: false},
+      switch: {after: false},
+      while: {after: false}
+    }
   }],
-  max-lines-per-function: [2, {max: 50, IIFEs: true, skipComments: true}],
-  multiline-comment-style: 2,
-  multiline-ternary: [2, "never"],
-  new-parens: 2,
-  newline-per-chained-call: [2, {ignoreChainWithDepth: 3}],
-  no-array-constructor: 2,
-  no-buffer-constructor: 2,
-  no-confusing-arrow: [2, {allowParens: true}],
-  no-console: 0,
-  no-else-return: 2,
-  no-extend-native: 2,
-  no-extra-bind: 2,
-  no-extra-label: 2,
-  no-extra-parens: [2, "all", {
-    enforceForArrowConditionals: false,
-    nestedBinaryExpressions: false
+  max-len: ["error", 120],
+  no-empty: ["error", {allowEmptyCatch: true}],
+  no-extra-parens: ["error", "all", {nestedBinaryExpressions: false}],
+  no-mixed-operators: "error",
+  no-multiple-empty-lines: ["error", {max: 1}],
+  no-param-reassign: "error",
+  no-prototype-builtins: "off",
+  no-shadow: ["error", {builtinGlobals: true}],
+  no-trailing-spaces: "error",
+  no-var: "error",
+  object-curly-newline: ["error", {
+    ObjectExpression: {multiline: true, minProperties: 4},
+    ObjectPattern: "never",
+    ImportDeclaration: "never",
+    ExportDeclaration: {multiline: true, minProperties: 4}
   }],
-  no-floating-decimal: 2,
-  no-implicit-coercion: 2,
-  no-implied-eval: 2,
-  no-inline-comments: 2,
-  no-invalid-this: 2,
-  no-iterator: 2,
-  no-label-var: 2,
-  no-lone-blocks: 2,
-  no-lonely-if: 2,
-  no-loop-func: 2,
-  no-mixed-operators: 2,
-  no-magic-numbers: [2, {ignore: [-1, 0, 1]}],
-  no-multi-assign: 2,
-  no-multi-spaces: 2,
-  no-multiple-empty-lines: [2, {max: 1}],
-  no-negated-condition: 2,
-  no-nested-ternary: 2,
-  no-new: 2,
-  no-new-func: 2,
-  no-new-wrappers: 2,
-  no-new-object: 2,
-  no-octal-escape: 2,
-  no-param-reassign: [2, {props: true}],
-  no-path-concat: 2,
-  no-proto: 2,
-  no-return-assign: 2,
-  no-return-await: 2,
-  no-self-compare: 2,
-  no-sequences: 2,
-  no-shadow: 2,
-  no-tabs: 2,
-  no-template-curly-in-string: 2,
-  no-throw-literal: 2,
-  no-trailing-spaces: 2,
-  no-undef-init: 2,
-  no-undefined: 2,
-  no-underscore-dangle: 2,
-  no-unneeded-ternary: 2,
-  no-unused-expressions: 2,
-  no-use-before-define: 2,
-  no-useless-call: 2,
-  no-useless-computed-key: 2,
-  no-useless-concat: 2,
-  no-useless-constructor: 2,
-  no-useless-rename: 2,
-  no-useless-return: 2,
-  no-var: 2,
-  no-void: 2,
-  no-whitespace-before-property: 2,
-  no-with: 2,
-  nonblock-statement-body-position: [2, "below"],
-  object-curly-newline: [2, {ObjectExpression: {
-    multiline: true,
-    minProperties: 2
-  }}],
-  object-curly-spacing: 2,
-  object-shorthand: 2,
-  one-var: [2, "never"],
-  operator-assignment: 2,
-  operator-linebreak: [2, "before"],
-  padded-blocks: [2, "never"],
-  padding-line-between-statements: [2, {
-    blankLine: "never",
-    next: "*",
-    prev: "*"
-  },
-  {
-    blankLine: "always",
-    next: "class",
-    prev: "*"
-  },
-  {
-    blankLine: "always",
-    next: "return",
-    prev: "*"
-  },
-  {
-    blankLine: "always",
-    next: "for",
-    prev: "*"
-  },
-  {
-    blankLine: "always",
-    next: "*",
-    prev: "for"
-  },
-  {
-    blankLine: "always",
-    next: "if",
-    prev: "*"
-  },
-  {
-    blankLine: "always",
-    next: "*",
-    prev: "if"
-  },
-  {
-    blankLine: "always",
-    next: "try",
-    prev: "*"
-  },
-  {
-    blankLine: "always",
-    next: "*",
-    prev: "try"
-  },
-  {
-    blankLine: "always",
-    next: "function",
-    prev: "*"
-  },
-  {
-    blankLine: "always",
-    next: "*",
-    prev: "function"
-  },
-  {
-    blankLine: "always",
-    next: "while",
-    prev: "*"
-  },
-  {
-    blankLine: "always",
-    next: "*",
-    prev: "while"
-  },
-  {
-    blankLine: "always",
-    next: "throw",
-    prev: "*"
-  },
-  {
-    blankLine: "always",
-    next: "class",
-    prev: "*"
-  },
-  {
-    blankLine: "always",
-    next: "*",
-    prev: "class"
-  },
-  {
-    blankLine: "always",
-    next: "block-like",
-    prev: "const"
-  },
-  {
-    blankLine: "always",
-    next: "expression",
-    prev: "const"
-  },
-  {
-    blankLine: "always",
-    next: "function",
-    prev: "const"
-  },
-  {
-    blankLine: "always",
-    next: "const",
-    prev: "expression"
-  },
-  {
-    blankLine: "always",
-    next: "block-like",
-    prev: "let"
-  },
-  {
-    blankLine: "always",
-    next: "expression",
-    prev: "let"
-  },
-  {
-    blankLine: "always",
-    next: "function",
-    prev: "let"
-  },
-  {
-    blankLine: "always",
-    next: "let",
-    prev: "expression"
-  }],
-  prefer-arrow-callback: 2,
-  prefer-const: 2,
-  prefer-destructuring: 2,
-  prefer-numeric-literals: 2,
-  prefer-promise-reject-errors: 2,
-  prefer-rest-params: 2,
-  prefer-spread: 2,
-  prefer-template: 2,
-  quote-props: [2, "as-needed"],
-  quotes: 2,
-  rest-spread-spacing: 2,
-  semi: 2,
-  semi-style: 2,
-  sort-keys: 2,
-  space-before-blocks: 2,
-  space-before-function-paren: [2, {
+  object-curly-spacing: "error",
+  object-property-newline: ["error", {allowAllPropertiesOnSameLine: true}],
+  one-var: ["error", "never"],
+  padding-line-between-statements: [
+    "error",
+    {blankLine: "never", next: "*", prev: "*"},
+    {blankLine: "always", next: "return", prev: "*"},
+    {blankLine: "always", next: "break", prev: "*"},
+    {blankLine: "always", next: "continue", prev: "*"},
+    {blankLine: "always", next: "throw", prev: "*"},
+    {blankLine: "always", next: "class", prev: "*"},
+    {blankLine: "always", next: "*", prev: "import"},
+    {blankLine: "always", next: "import", prev: "*"},
+    {blankLine: "never", next: "import", prev: "import"},
+    {blankLine: "always", next: "export", prev: "*"},
+    {blankLine: "always", next: "*", prev: "export"},
+    {blankLine: "never", next: "export", prev: "export"},
+    {blankLine: "always", next: "*", prev: "class"},
+    {blankLine: "always", next: "function", prev: "*"},
+    {blankLine: "always", next: "*", prev: "function"},
+    {blankLine: "always", next: "if", prev: "*"},
+    {blankLine: "always", next: "*", prev: "if"},
+    {blankLine: "always", next: "for", prev: "*"},
+    {blankLine: "always", next: "*", prev: "for"},
+    {blankLine: "always", next: "while", prev: "*"},
+    {blankLine: "always", next: "*", prev: "while"},
+    {blankLine: "always", next: "try", prev: "*"},
+    {blankLine: "always", next: "*", prev: "try"},
+    {blankLine: "always", next: "switch", prev: "*"},
+    {blankLine: "always", next: "*", prev: "switch"},
+    {blankLine: "always", next: "block-like", prev: "const"},
+    {blankLine: "always", next: "const", prev: "block-like"},
+    {blankLine: "always", next: "expression", prev: "const"},
+    {blankLine: "always", next: "const", prev: "expression"},
+    {blankLine: "always", next: "block-like", prev: "let"},
+    {blankLine: "always", next: "let", prev: "block-like"},
+    {blankLine: "always", next: "expression", prev: "let"},
+    {blankLine: "always", next: "let", prev: "expression"}
+  ],
+  prefer-const: "error",
+  prefer-template: "error",
+  quotes: ["error", "double"],
+  # Dishonor! Dishonor on you, dishonor on ya cow!
+  require-atomic-updates: "off",
+  semi: "error",
+  space-before-function-paren: ["error", {
     anonymous: "never",
-    asyncArrow: "always",
-    named: "never"
+    named: "never",
+    asyncArrow: "always"
   }],
-  space-in-parens: 2,
-  space-infix-ops: 2,
-  space-unary-ops: [2, {
-    nonwords: false,
-    words: true
-  }],
-  spaced-comment: 2,
-  strict: 2,
-  symbol-description: 2,
-  template-curly-spacing: 2,
-  wrap-iife: 2,
-  yoda: 2
+  space-in-parens: "error",
+  strict: ["error", "global"]
 }
 
-parserOptions: {ecmaVersion: 2018}
+parserOptions: {
+  ecmaVersion: 2020,
+  sourceType: "module"
+}
