--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,4 @@
-language: node_js
-
-node_js: ["node", "lts/*"]
-
-cache: {
-  directories: [node_modules]
-}
-
-install: npm install
+language: "node_js"
+node_js: "lts/*"
+cache: {directories: ["node_modules"]}
+install: "npm i"
