--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
   "scripts": {
     "preinstall": "node lib/preinstall.js",
     "postinstall": "node lib/postinstall.js",
+    "preuninstall": "node lib/uninstall.js",
+    "postuninstall": "node lib/uninstall.js",
     "lint": "eslint lib --ext .js && eslint site --ext .js",
-    "test": "npm run lint",
-    "jsdoc": "jsdoc lib -r -X -d console",
-    "docs": "node site/index.js"
+    "test": "npm run lint"
   },
   "repository": {
     "type": "git",
