--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "patron.js",
   "version": "3.2.0",
-  "type": "module",
   "description": "The cleanest command framework for discord.js and eris.",
+  "type": "module",
+  "engines": {
+    "node": ">=12.13.1"
+  },
   "main": "./lib/index.js",
   "types": "./types/index.d.ts",
   "scripts": {
