--- a/package.json
+++ b/package.json
@@ -1,7 +1,18 @@
 {
   "name": "patron.js",
   "version": "3.2.0",
+  "author": "ElJay#7711",
+  "license": "AGPL-3.0-only",
   "description": "The cleanest command framework for discord.js and eris.",
+  "keywords": [
+    "discord",
+    "api",
+    "nodejs",
+    "discordjs",
+    "eris",
+    "command",
+    "framework"
+  ],
   "type": "module",
   "engines": {
     "node": ">=12.13.1"
@@ -14,28 +25,17 @@
     "lint": "eslint lib --ext .js && eslint site --ext .js",
     "test": "npm run lint"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/LJNeon/patron.js.git"
-  },
-  "keywords": [
-    "discord",
-    "api",
-    "nodejs",
-    "discordjs",
-    "eris",
-    "command",
-    "framework"
-  ],
-  "author": "ElJay#7711",
-  "license": "AGPL-3.0-only",
-  "bugs": {
-    "url": "https://github.com/LJNeon/patron.js/issues"
-  },
-  "homepage": "https://github.com/LJNeon/patron.js#readme",
   "devDependencies": {
     "eslint": "^6.6.0",
     "jsdoc": "^3.6.3",
     "puppeteer": "^2.0.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/LJNeon/patron.js.git"
+  },
+  "bugs": {
+    "url": "https://github.com/LJNeon/patron.js/issues"
+  },
+  "homepage": "https://github.com/LJNeon/patron.js#readme"
 }
