fix eslint failing to parse import.meta

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -112,6 +112,8 @@ rules: {
   strict: ["error", "global"]
 }
 
+parser: "babel-eslint"
+
 parserOptions: {
   ecmaVersion: 2020,
   sourceType: "module"
