--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,7 @@
 language: "node_js"
-node_js: "lts/*"
+
+node_js: ["lts/*", "node"]
+
 cache: {directories: ["node_modules"]}
-install: "npm i"
+
+install: "npm i --only=dev"
