potential fix for CommonJS on node 12

--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
   ],
   "main": "./lib/index.js",
   "exports": {
-    ".": {
-      "require": "./lib/index.js",
-      "import": "./lib/esm.mjs",
-      "default": "./lib/index.js"
-    },
+    ".": [
+      {
+        "require": "./lib/index.js",
+        "import": "./lib/esm.mjs"
+      },
+      "./lib/index.js"
+    ],
     "./esm": "./lib/esm.mjs"
   },
   "types": "./types/index.d.ts",
