--- a/package.json
+++ b/package.json
@@ -34,8 +34,7 @@
   "dependencies": {},
   "devDependencies": {
     "eslint": "^6.8.0",
-    "jsdoc": "^3.6.3",
-    "puppeteer": "^2.0.0"
+    "typedoc": "^0.16.9"
   },
   "repository": {
     "type": "git",
