--- a/package.json
+++ b/package.json
@@ -33,8 +33,9 @@
   },
   "dependencies": {},
   "devDependencies": {
+    "@types/node": "^13.13.1",
     "eslint": "^6.8.0",
-    "typedoc": "^0.16.9"
+    "typescript": "^3.8.3"
   },
   "repository": {
     "type": "git",
