--- a/package.json
+++ b/package.json
@@ -13,16 +13,13 @@
     "command",
     "framework"
   ],
+  "engines": {
+    "node": ">=14.0.0"
+  },
   "main": "./lib/index.js",
   "exports": {
-    ".": [
-      {
-        "require": "./lib/index.js",
-        "import": "./lib/esm.mjs"
-      },
-      "./lib/index.js"
-    ],
-    "./esm": "./lib/esm.mjs"
+    "require": "./lib/index.js",
+    "import": "./lib/esm.mjs"
   },
   "types": "./types/index.d.ts",
   "scripts": {
@@ -33,7 +30,8 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "@types/node": "^13.13.1",
+    "@types/node": "^13.13.2",
+    "babel-eslint": "^10.1.0",
     "eslint": "^6.8.0",
     "typescript": "^3.8.3"
   },
