--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "@types/node": "^13.13.2",
+    "@types/node": "^13.13.5",
     "babel-eslint": "^10.1.0",
+    "eris": "^0.12.0",
     "eslint": "^6.8.0",
+    "typedoc": "^0.17.6",
     "typescript": "^3.8.3"
   },
   "repository": {
