--- a/.npmignore
+++ b/.npmignore
@@ -1,5 +1,9 @@
-node_modules/
-site/
+# Avoid publishing generated library files.
+libraryHandler.js
 lib.d.ts
+# Avoid publishing development files.
+node_modules/
+package-lock.json
+docs/
 .eslintrc.yml
 .travis.yml
