--- a/package.json
+++ b/package.json
@@ -23,18 +23,16 @@
   },
   "types": "./types/index.d.ts",
   "scripts": {
-    "preinstall": "node lib/preinstall.js",
-    "postinstall": "node lib/postinstall.js",
     "lint": "eslint lib --ext .js",
-    "test": "npm run lint"
+    "test": "npm run lint --silent",
+    "preinstall": "node lib/preinstall.js",
+    "postinstall": "node lib/postinstall.js"
   },
   "dependencies": {},
   "devDependencies": {
-    "@types/node": "^14.0.14",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^7.3.1",
-    "typedoc": "^0.17.7",
-    "typescript": "^3.9.5"
+    "@types/node": "^14.10.1",
+    "eslint": "^7.8.1",
+    "typescript": "^4.0.2"
   },
   "repository": {
     "type": "git",
