--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "patron",
   "version": "4.0.0",
-  "author": "ElJay#7711",
-  "license": "GPL-3.0-or-later",
+  "author": "LJ Talbot",
+  "license": "LGPL-3.0-or-later",
   "description": "The cleanest command framework for discord.js and eris.",
   "keywords": [
     "discord",
@@ -14,25 +14,24 @@
     "framework"
   ],
   "engines": {
-    "node": ">=14.0.0"
+    "node": ">=14.16.1"
   },
-  "main": "./lib/index.js",
   "exports": {
     "require": "./lib/index.js",
     "import": "./lib/esm.mjs"
   },
+  "bin": {
+    "patron": "./lib/cli.js"
+  },
   "types": "./types/index.d.ts",
   "scripts": {
-    "lint": "eslint lib --ext .js",
-    "test": "npm run lint --silent",
-    "preinstall": "node lib/preinstall.js",
-    "postinstall": "node lib/postinstall.js"
+    "lint": "eslint lib --ext .js"
   },
   "dependencies": {},
   "devDependencies": {
-    "@types/node": "^14.10.1",
-    "eslint": "^7.8.1",
-    "typescript": "^4.0.2"
+    "@types/node": "^14.14.7",
+    "eslint": "^7.13.0",
+    "typescript": "^4.0.5"
   },
   "repository": {
     "type": "git",
